tests/snapshots/codegen_programs__global_scalar.snap
---
source: tests/codegen_programs.rs
expression: "int g = -5;\nint answer(void) { return g; }"
---
	.section	__TEXT,__text,regular,pure_instructions
	.globl	_answer
	.p2align	2
_answer:
	stp x29, x30, [sp, #-32]!
	mov x29, sp
	adrp x0, _g@PAGE
	add x0, x0, _g@PAGEOFF
	ldr w0, [x0]
	b Lanswer_return_0
Lanswer_return_0:
	mov sp, x29
	ldp x29, x30, [sp], #32
	ret
	.section	__DATA,__data
	.globl	_g
	.p2align	2
_g:
	.long	-5
.subsections_via_symbols
