tests/snapshots/codegen_programs__large_constant.snap
---
source: tests/codegen_programs.rs
expression: "int answer(void) { return 123456789; }"
---
	.section	__TEXT,__text,regular,pure_instructions
	.globl	_answer
	.p2align	2
_answer:
	stp x29, x30, [sp, #-32]!
	mov x29, sp
	movz w0, #52501
	movk w0, #1883, lsl #16
	b Lanswer_return_0
Lanswer_return_0:
	mov sp, x29
	ldp x29, x30, [sp], #32
	ret
.subsections_via_symbols
