tests/snapshots/codegen_programs__local_round_trip.snap
---
source: tests/codegen_programs.rs
expression: "int answer(void) { int x = 7; return x; }"
---
	.section	__TEXT,__text,regular,pure_instructions
	.globl	_answer
	.p2align	2
_answer:
	stp x29, x30, [sp, #-32]!
	mov x29, sp
	movz w0, #7
	str w0, [x29, #16]
	add x0, x29, #16
	ldr w0, [x0]
	b Lanswer_return_0
Lanswer_return_0:
	mov sp, x29
	ldp x29, x30, [sp], #32
	ret
.subsections_via_symbols
